implementação de segurança 2/3 ok